<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.nick.projectzerorework.MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textSize="@dimen/title_font"
        android:background="@color/title_background"
        android:textColor="@color/title_color"
        android:textStyle="bold"
        android:text="My NanoDegree Apps!"/>
    <Button
        android:layout_width="@dimen/main_button_width"
        android:id="@+id/spotify"
        android:layout_height="@dimen/main_button_height"
        android:layout_marginTop="@dimen/button_spacing"
        android:text="@string/spotify"
        android:textSize="@dimen/button_font"
        android:background="@color/main_buttons"
        android:onClick="spotify"
        />
    <Button
        android:layout_width="@dimen/main_button_width"
        android:id="@+id/scores"
        android:layout_height="@dimen/main_button_height"
        android:layout_marginTop="@dimen/button_spacing"
        android:text="@string/scores"
        android:textSize="@dimen/button_font"
        android:background="@color/main_buttons"
        android:onClick="scores"
        />
    <Button
        android:layout_width="@dimen/main_button_width"
        android:id="@+id/library"
        android:layout_height="@dimen/main_button_height"
        android:layout_marginTop="@dimen/button_spacing"
        android:text="@string/library"
        android:textSize="@dimen/button_font"
        android:background="@color/main_buttons"
        android:onClick="library"
        />
    <Button
        android:layout_width="@dimen/main_button_width"
        android:id="@+id/build_it"
        android:layout_height="@dimen/main_button_height"
        android:layout_marginTop="@dimen/button_spacing"
        android:text="@string/build_it"
        android:textSize="@dimen/button_font"
        android:background="@color/main_buttons"
        android:onClick="build_it"
        />

    <Button
        android:layout_width="@dimen/main_button_width"
        android:id="@+id/xyz"
        android:layout_height="@dimen/main_button_height"
        android:layout_marginTop="@dimen/button_spacing"
        android:text="@string/xyz"
        android:textSize="@dimen/button_font"
        android:background="@color/main_buttons"
        android:onClick="xyz"
        />

    <Button
        android:layout_width="@dimen/my_app_width"
        android:id="@+id/my_app"
        android:layout_height="@dimen/my_app_heigth"
        android:layout_marginTop="@dimen/my_app_spacing"
        android:text="@string/my_app"
        android:textSize="@dimen/button_font"
        android:background="@color/my_app_backgroind"
        android:onClick="my_app"
        />
    </LinearLayout>
</ScrollView>
